dataset1235/2025-2/610742602/users/2705833823/executions/677928262_3691284457.log
== RUN (2025-08-28 20:23:09)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:23:03)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:23:10)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:23:23)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:21:33)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4
mediap2 = mediap1 / 1+2+3+4

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:20:34)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/ 1 + 2 + 3 + 4

print(round(mediap,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:19:59)
-- CODE: 
nota1 = int(input("Insira a primeira nota:"))
nota2 = int(input("Insira a segunda nota:"))
nota3 = int(input("Insira a terceira nota:"))
nota4 = int(input("Insira a quarta nota:"))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/ 1 + 2 + 3 + 4

print(round(mediap,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira a primeira nota:"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira a primeira nota:"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira a primeira nota:"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira a primeira nota:"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira a primeira nota:"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nota1 = int(input("Insira a primeira nota:"))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:23:09)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:23:32)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1) + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira a primeira nota:Insira a segunda nota:Insira a terceira nota:Insira a quarta nota:7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:23:04)
-- CODE: 
nota1 = float(input("Insira a primeira nota:"))
nota2 = float(input("Insira a segunda nota:"))
nota3 = float(input("Insira a terceira nota:"))
nota4 = float(input("Insira a quarta nota:"))

mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
mediap2 = mediap1 / (1+2+3+4)

print(round(mediap2,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    mediap1 = (nota1 * 1() + (nota2 * 2) + (nota3 * 3) + (nota4 * 4)
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
